<resources>
    <string name="app_name">GitStarsCounter</string>
    <string name="message_hello">Здравствуйте вас приветствует приложение подсчета звезд для github аккаунта.</string>
    <string name="hint_rep_name">Имя репозитория</string>
    <string name="button_find_rep">Найти</string>
    <string name="login_error">"Ошибка логинации"</string>
    <string name="message_star_grafic">График звезд</string>
    <string name="button_use_rep">Использовать</string>
    <string name="unknown_user_text">Неизвестный пользователь</string>
    <string name="no_internet_text">Нет подключения</string>
    <string name="hint_user_name">Имя пользователя</string>
    <string name="less"><![CDATA[<]]></string>
    <string name="more"><![CDATA[>]]></string>
    <string name="user_name_text">Введите имя пользователя</string>
    <string name="no_internet_message">Нет подключения</string>
    <string name="start">Start service</string>
    <string name="stop">Stop service</string>
    <string name="limited_resource_message">Использовано максимальное количество запросов</string>
    <string name="database_data_message">Сохраненные данные</string>
    <string name="unknown_database_user">Данного пользователя нет в базе данных</string>
    <string name="title_notification_new_stars">Новые звезды</string>
    <string name="saved_repository_text">Сохраненные репозитории</string>
    <string name="button_text_delete">удалить</string>
    <string name="repository">Репозитории</string>
</resources>