<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.screens.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gold">

            <TextView
                android:id="@+id/text_view_no_internet_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/no_internet_message"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gold">

            <TextView
                android:id="@+id/text_view_limited_resource_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/limited_resource_message"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/user_name_text"
            android:textColor="@color/color_primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_view_login_repository_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:hint="@string/hint_user_name"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_find_rep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/color_primary"
                android:text="@string/button_find_rep"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_start_repository_screen"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_primary"
                android:text="@string/repository"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.omega_r.libs.omegarecyclerview.OmegaRecyclerView
                android:id="@+id/recycler_repositories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#888"
                android:dividerHeight="1dp"
                app:paginationErrorLayout="@layout/item_progress"
                app:paginationLayout="@layout/item_progress" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
